--- a/cluster-state/local/monitoring/kube-prometheus-stack.yaml
+++ b/cluster-state/local/monitoring/kube-prometheus-stack.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: ops
+  project: default
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
     chart: kube-prometheus-stack
