--- a/cluster-state/local/monitoring/promtail.yaml
+++ b/cluster-state/local/monitoring/promtail.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: ops
+  project: default
   source:
     repoURL: https://grafana.github.io/helm-charts
     chart: promtail
