--- a/cluster-state/local/monitoring/kube-prometheus-stack.yaml
+++ b/cluster-state/local/monitoring/kube-prometheus-stack.yaml
@@ -45,6 +45,7 @@ spec:
 
         prometheus-node-exporter:
           fullnameOverride: node-exporter
+          hostRootFsMount: false
           prometheus:
             monitor:
               enabled: true
