disable hostRootFs for node-exporter

--- a/cluster-state/local/monitoring/kube-prometheus-stack.yaml
+++ b/cluster-state/local/monitoring/kube-prometheus-stack.yaml
@@ -45,7 +45,8 @@ spec:
 
         prometheus-node-exporter:
           fullnameOverride: node-exporter
-          hostRootFsMount: false
+          hostRootFsMount:
+            enabled: false
           prometheus:
             monitor:
               enabled: true
