--- a/cluster-state/local/monitoring/grafana.yaml
+++ b/cluster-state/local/monitoring/grafana.yaml
@@ -43,7 +43,7 @@ spec:
         sidecar:
           datasources:
             enabled: true
-            defaultDatasourceEnabled: true
+            defaultDatasourceEnabled: false
 
           dashboards:
             enabled: true
