disable cadvisor scraping

--- a/cluster-state/local/monitoring/kube-prometheus-stack.yaml
+++ b/cluster-state/local/monitoring/kube-prometheus-stack.yaml
@@ -21,7 +21,7 @@ spec:
           create: true
 
         kubeScheduler:
-          enabled: false
+          enabled: true
 
         kubeEtcd:
           enabled: true
@@ -61,6 +61,8 @@ spec:
 
         kubelet:
           enabled: true
+          serviceMonitor:
+            cAdvisor: false
 
         grafana:
           enabled: false
