--- a/argocd/base/applications.yaml
+++ b/argocd/base/applications.yaml
@@ -20,3 +20,26 @@ spec:
       - ApplyOutOfSyncOnly=true
     automated:
       selfHeal: true
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: cadvisor
+spec:
+  project: default
+  source:
+    repoURL: 'https://github.com/pavars/masters.git'
+    path: cadvisor
+    targetRevision: main
+    directory:
+      recurse: true
+  destination:
+    namespace: cadvisor
+    name: in-cluster
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+      - ApplyOutOfSyncOnly=true
+    automated:
+      selfHeal: true
