--- a/cadvisor/kustomization.yaml
+++ b/cadvisor/kustomization.yaml
@@ -1,8 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+bases:
+- https://github.com/google/cadvisor//deploy/kubernetes/base
+
 resources:
-- https://github.com/google/cadvisor/tree/master/deploy/kubernetes/base
 - cadvisor.yaml
 
 namespace: cadvisor
