--- a/cluster-state/local/demo/podinfoA.yaml
+++ b/cluster-state/local/demo/podinfoA.yaml
@@ -7,7 +7,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 
 spec:
-  project: ops
+  project: default
   source:
     repoURL: https://stefanprodan.github.io/podinfo
     chart: podinfo
