add demo application to demo namespace

--- a/cluster-state/local/demo/podinfoA.yaml
+++ b/cluster-state/local/demo/podinfoA.yaml
@@ -41,7 +41,7 @@ spec:
 
   destination:
     name: in-cluster
-    namespace: test
+    namespace: demo
   syncPolicy:
     automated: {}
     syncOptions:
