add trivy-system namespace

--- a/cluster-state/local/trivy-system/trivy-operator.yaml
+++ b/cluster-state/local/trivy-system/trivy-operator.yaml
@@ -46,7 +46,7 @@ spec:
 
   destination:
     name: in-cluster
-    namespace: trivy
+    namespace: trivy-system
   syncPolicy:
     automated: {}
     syncOptions:
