update trivy config and add secret example

--- a/cluster-state/local/trivy-system/trivy-operator.yaml
+++ b/cluster-state/local/trivy-system/trivy-operator.yaml
@@ -31,8 +31,10 @@ spec:
           # ignoreUnfixed is the flag to show only fixed vulnerabilities in
           # vulnerabilities reported by Trivy. Set to true to enable it.
           #
-          ignoreUnfixed: false
+          ignoreUnfixed: true
 
+          # ja norādīsim savu githubToken
+          #existingSecret: true
           # resources resource requests and limits
           resources:
             requests:
